--- a/partials/settings.phtml
+++ b/partials/settings.phtml
@@ -1,24 +1,15 @@
 <?php
 if (!defined('BASEDIR')) die('You cannot call this script directly !');
-if (!isset($_GET['aid'])) {
+
+// redirect if no aid is specified
+if (!$__aid) {
     header("Location:" . url(['action' => 'new']));
     die();
 }
-// get algorithm id
-$aid = $_GET['aid'];
-
-// get algorithm details from database
-require_once BASEDIR . "includes/dataModel.php";
-$_model = new DataModel();
-$_algorithm = $_model->fetchAlgorithm($aid);
-$_model->close();
-
-// prepare settings
-$_settings['private'] = is_null($_algorithm->date_publish);
 
 // check authentication
-if (!isSignedIn() || $_SESSION['uid'] != $_algorithm->uid) {
-    header("Location:" . url(['action' => 'view', 'aid' => $aid]));
+if (!$__uid || !$__owner) {
+    header("Location:" . url(['action' => 'view', 'aid' => $__aid]));
     die();
 }
 
@@ -48,22 +39,36 @@ require_once BASEDIR . "partials/headers/algorithmHeader.phtml";
 <!-- CONTENT -->
 <div class="well">
     <h3><?= $l10n['visibility'] ?></h3>
-
-    <div class="visibility" <?php if ($_settings['private']): ?>style="display: none;"<?php endif ?>>
+    <?php if ($__algorithm->name): // allow publishing only if a name is defined! ?>
+        <div class="settings-visibility" <?php if (!$__public): ?>style="display: none;"<?php endif ?>>
         <p><?= $l10n['public_message'] ?></p>
         <button id="btn-private" type="button" class="btn btn-warning"><?= $l10n['make_private'] ?></button>
     </div>
-    <div class="visibility" <?php if (!$_settings['private']): ?>style="display: none;"<?php endif ?>>
+        <div class="settings-visibility" <?php if ($__public): ?>style="display: none;"<?php endif ?>>
         <p><?= $l10n['private_message'] ?></p>
         <button id="btn-public" type="button" class="btn btn-success"><?= $l10n['make_public'] ?></button>
     </div>
+    <?php else: ?>
+        <div class="settings-visibility">
+            <p><?= $l10n['private_message'] ?></p>
+
+            <div class="alert alert-danger"><?= $l10n['delete_not_possible'] ?></div>
+            <button type="button" class="btn btn-success disabled"><?= $l10n['make_public'] ?></button>
+        </div>
+    <?php endif ?>
 </div>
 <div class="alert alert-danger">
     <h3><?= $l10n['delete'] ?></h3>
 
-    <p><?= $l10n['delete_message'] ?></p>
-    <button id="btn-delete" type="button" class="btn btn-danger" data-warning="<?= $l10n['delete_warning'] ?>">
-        <?= $l10n['delete_algorithm'] ?>
-    </button>
+    <div class="settings-delete">
+        <p><?= $l10n['delete_message'] ?></p>
+
+        <form id="delete-form" role="form" method="post" name="delete" action="<?= url(['action' => 'user']) ?>">
+            <input id="delete-msg" name="successMsg" style="display: none;"/>
+            <button id="btn-delete" type="button" class="btn btn-danger" data-warning="<?= $l10n['delete_warning'] ?>">
+                <?= $l10n['delete_algorithm'] ?>
+            </button>
+        </form>
+    </div>
 </div>
 <!-- CONTENT END -->
