--- a/partials/settings.phtml
+++ b/partials/settings.phtml
@@ -52,7 +52,7 @@ require_once BASEDIR . "partials/headers/algorithmHeader.phtml";
         <div class="settings-visibility">
             <p><?= $l10n['private_message'] ?></p>
 
-            <div class="alert alert-danger"><?= $l10n['delete_not_possible'] ?></div>
+            <div class="alert alert-danger"><?= $l10n['publish_not_possible'] ?></div>
             <button type="button" class="btn btn-success disabled"><?= $l10n['make_public'] ?></button>
         </div>
     <?php endif ?>
